--- a/src/root/quotas.config
+++ b/src/root/quotas.config
@@ -1,3 +1,5 @@
+# download quotas config
+
 # download quota (Mb)
 dl_quota_mb=150
 dl_quota=$(($dl_quota_mb * 1024 * 1024))
@@ -20,3 +22,4 @@ if_lan=br-lan		# openwrt
 
 # wan interface
 if_wan=eth0.2
+
