conf: get lan/wan settings from /etc/config (uci)

--- a/src/etc/download_quotas.conf
+++ b/src/etc/download_quotas.conf
@@ -1,5 +1,9 @@
 # download quotas config
 
+# Get settings from /etc/config
+get_config()       {  uci -q get "$1";  }
+get_quota_config() {  section="$1"; get_config "download_quotas.@${section}[0].$2";  }
+
 # download quota (Mb)
 dl_quota_mb=100
 dl_quota=$(($dl_quota_mb * 1024 * 1024))
@@ -12,14 +16,17 @@ dl_cap_max=$(($dl_cap_max_kb * 8))
 dl_cap_kb=10
 dl_cap=$(($dl_cap_kb * 8))
 
-# lan addresses to limit (make sure it includes dhcp range)
-lan=192.168.1
-ip_start=100
-ip_end=249
+# lan/wifi addresses to limit (make sure it includes dhcp range)
+#lan=192.168.3
+lan=`get_config "network.lan.ipaddr" | cut -d. -f1-3`
+ip_start=`get_config "dhcp.lan.start"`
+dhcp_max=`get_config "dhcp.lan.limit"`
+ip_end=$(($ip_start + $dhcp_max - 1))
+[ $ip_end -gt 254 ] && ip_end=254
 
 # lan interface
 if_lan=br-lan		# openwrt
 
 # wan interface
-if_wan=eth0.2
+if_wan=`get_config "network.wan.ifname"`
 
