luci: settings tab
settings form edits /etc/config/download_quotas,
/etc/download_quotas.conf gets settings from /etc/config.

--- a/src/etc/download_quotas.conf
+++ b/src/etc/download_quotas.conf
@@ -5,15 +5,15 @@ get_config()       {  uci -q get "$1";  }
 get_quota_config() {  section="$1"; get_config "download_quotas.@${section}[0].$2";  }
 
 # download quota (Mb)
-dl_quota_mb=100
+dl_quota_mb=`get_quota_config "guests" "download_quota"`
 dl_quota=$(($dl_quota_mb * 1024 * 1024))
 
 # max download speed (k/s)
-dl_cap_max_kb=50
+dl_cap_max_kb=`get_quota_config "guests" "speed_normal"`
 dl_cap_max=$(($dl_cap_max_kb * 8))
 
 # max download speed once over quota (k/s)
-dl_cap_kb=10
+dl_cap_kb=`get_quota_config "guests" "speed_overquota"`
 dl_cap=$(($dl_cap_kb * 8))
 
 # lan/wifi addresses to limit (make sure it includes dhcp range)
