option: lan interface

--- a/src/etc/download_quotas.conf
+++ b/src/etc/download_quotas.conf
@@ -25,7 +25,7 @@ ip_end=$(($ip_start + $dhcp_max - 1))
 [ $ip_end -gt 254 ] && ip_end=254
 
 # lan interface
-if_lan=br-lan		# openwrt
+if_lan=`get_quota_config "global" "lan_interface"`
 
 # wan interface
 if_wan=`get_config "network.wan.ifname"`
